--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a href="education.html">Education</a>
       <a href="projects.html">Projects</a>
       <a href="skills.html">Skills</a>
-      <a href="hobbies.html">Contact</a>
+      <a href="hobbies.html">Hobbies</a>
     </nav>
   </header>
 
@@ -31,3 +31,4 @@
   </footer>
 </body>
 </html>
+
