--- a/skills.html
+++ b/skills.html
@@ -14,7 +14,7 @@
       <a href="education.html">Education</a>
       <a href="projects.html">Projects</a>
       <a href="skills.html">Skills</a>
-      <a href="hobbies.html">Contact</a>
+      <a href="hobbies.html">Hobbies</a>
     </nav>
   </header>
 
@@ -32,3 +32,4 @@
   </footer>
 </body>
 </html>
+
