--- a/index.html
+++ b/index.html
@@ -25,10 +25,21 @@
       <p>Hello! I’m <strong>Manjunath</strong>, a passionate Java developer currently pursuing my degree. I enjoy building web apps using Java, Spring Boot, and modern front-end tools.</p>
     </section>
   </main>
+<main>
+  <h2>Welcome to My Portfolio</h2>
+  <p>I’m Manjunath MH, a Java Developer in progress.</p>
 
+  <a href="https://www.linkedin.com/in/manjunath-mh-8030b6300?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" 
+     target="_blank" 
+     style="background-color: #007ad7; color:white; padding:10px 20px; 
+            border-radius:5px; text-decoration:none;">
+     Visit My LinkedIn
+  </a>
+</main>
   <footer>
     <p>&copy; 2025 Manjunath MH</p>
   </footer>
 </body>
 </html>
+
 
